--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Google Cloud Run
 on:
   push:
     branches:
-      - main  # Deploy on push to the main branch
+      - master  # Deploy on push to the main branch
 
 jobs:
   deploy:
